packege hompage update

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "covid-19",
-  "homepage": "https://myusername.github.io/my-app",
+  "homepage": "https://parimalroy.github.io/covid-19-update",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
